[Simran added Authentication/Authorizations]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,10 @@ spring.mail.password=cqqq klsm fwty qxor
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.main.allow-bean-definition-overriding=true
+
+
+//redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
