--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=HiringApp
 server.port=8080
 
+#spring.security.enabled=false
+
 # JPA connectivity
 spring.datasource.url=jdbc:mysql://localhost:3306/hiringappspringboot
 spring.datasource.username=root
@@ -11,15 +13,21 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#Logging
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.amqp=INFO
 logging.level.com.learning.HiringApp=DEBUG
 logging.level.org.springframework=DEBUG
 
-
+#Error details
 server.error.include-message=always
 server.error.include-stacktrace=always
+
+jwt.secret=${JWT_SECRET:supersecretkeyformyjwt1234567890!}
+
+admin.email=simrandhiman3121@gmail.com
+admin.password=${ADMIN_PASSWORD:admin123}
 
 # RabbitMQ
 spring.rabbitmq.host=localhost
@@ -27,21 +35,20 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-#spring.security.enabled=false
-
 
 # Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=simrandhiman3121@gmail.com
-spring.mail.password=cqqq klsm fwty qxor
+spring.mail.password=nlco pokk dayt hsqv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+
 spring.main.allow-bean-definition-overriding=true
 
-
-//redis
-spring.redis.host=localhost
-spring.redis.port=6379
+#redis
+#spring.cache.type=redis
+#spring.redis.host=localhost
+#spring.redis.port=6379
 
